<resources>
    <string name="app_name">Personas</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="bk">Basketball</string>
    <string name="estudiar">Estudiar</string>
    <string name="internet">Internet</string>
    <string name="registrar">Registrar</string>
    <string name="borrar">Borrar</string>
    <string name="numero">No.</string>
    <string name="hobbie">Pasatiempos</string>
    <string name="mensaje">Se ha registrado exitosamente</string>
    <string name="error_1">Por favor digite el nombre</string>
    <string name="error_2">Por favor digite el apellido</string>
    <string name="error_3">Por favor digite la edad</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="buscar">Buscar</string>
    <string name="listar">Listar</string>
    <string name="mostrar">Mostrar en Tabla</string>
    <string-array name="opciones">
        <item>@string/registrar</item>
        <item>@string/mostrar</item>
        <item>@string/listar</item>
    </string-array>
</resources>
