<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.personas.Registro">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:text="@string/registro" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre"
            android:hint="@string/nombre" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtApellido"
            android:hint="@string/apellido" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txtEdad"
            android:hint="@string/edad" />

        <CheckBox
            android:text="@string/bk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkBasketball"
            android:checked="true" />

        <CheckBox
            android:text="@string/estudiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkEstudiar" />

        <CheckBox
            android:text="@string/internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chkInternet" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdRegistrar"
                android:layout_weight="1"
                tools:text="@string/registrar"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:text="Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmdLimpiar"
                android:layout_weight="1"
                tools:text="@string/borrar" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
